--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
 	<packaging>war</packaging>
 	<version>1.00</version>
 	<name>glot Maven Webapp</name>
+
+	<properties>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -85,11 +89,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-            <groupId>org.apache.tiles</groupId>
-            <artifactId>tiles-jsp</artifactId>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
 			<version>3.0.5</version>
 		</dependency>
-		
+
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
